    main/D2O/Wang.yml
    other/immersion oils/Leica Type F/Wang.yml
    other/immersion oils/Olympus IMMOIL-F30CC/Wang.yml
    other/immersion oils/Sigma Aldrich M5904/Wang.yml
  new data (thanks to Tobias König for submitting data!)
    main/ZnO/Stelling.yml
    main/MoO3/Stelling.yml
    other/mixed organic/PTB7-PC71BM/Stelling.yml
    other/mixed organic/P3HT-PC61BM/Stelling.yml
  updates:
    main/Si/Green.yml: renamed to "Green-1995.yml"
    organic/CH4 - methane/Rollefson.yml: references
    other/index-matching liquids/cargille/BK7_matching_liquid.yml: info
    other/index-matching liquids/cargille/fused_silica_matching_liquid-06350.yml: info
    other/index-matching liquids/cargille/fused_silica_matching_liquid-50350.yml: info
    other/index-matching liquids/cargille/acrylic_matching_liquid.yml: info
    organic/C3H8O3 - glycerol/Birkhoff.yml: references
    main/Ta2O5/Bright-amorphous.yml: recalculated with updated script, references
    main/Ta2O5/Bright-nanocrystalline.yml: recalculated with updated script, references
    other/mixed crystals/In2O3-SnO2/Konig.yml: references
    other/mixed crystals/In2O3-SnO2/Konig-EMA.yml: references
    organic/(C6H9NO)n - polyvinylpyrrolidone/Konig.yml: references
    other/mixed crystals/In2O3-SnO2/Moerland.yml: references
    main/B/Fernandez-Perea.yml: references
    main/Sc/Larruquert.yml: references
    main/GaN/Barker-o.yml: comments, references
    main/GaN/Barker-o.yml: comments, references
  bug fixes
    main/Al2O3/Querry-e.yml: data (Thanks to Philipp Franz, Paul-Drude-Institut für Festkörperelektronik, Berlin, Germany)

============================== 2017-03-25 ==============================

  multiple bug fixes in library.yml (thanks to Thibault North!)

============================== 2017-03-14 ==============================

  new data (thanks to Luca Bergamini for submitting data in yaml format!)
    main/TiN/Pfluger.yml
    main/TiC/Pfluger.yml
    main/VN/Pfluger.yml
    main/VC/Pfluger.yml