@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "H. S. Shi, G. Zhang and H. Y. Shen. Measurement of principal refractive indices and the thermal refractive index coefficients of yttrium vanadate, <a href=\"http://caod.oriprobe.com/articles/3152847/Measurement_of_Principal_Refractive_Indices_and_the_Thermal_Refractive.htm\"><i>J. Synthetic Cryst.</i> <b>30</b>, 85-88 (2001)</a>, as cited in Handbook of Optics, 3rd edition, Vol. 4. McGraw-Hill 2009"
+REFERENCES: "H. S. Shi, G. Zhang and H. Y. Shen. Measurement of principal refractive indices and the thermal refractive index coefficients of yttrium vanadate, <a href=\"http://caod.oriprobe.com/articles/3152847/Measurement_of_Principal_Refractive_Indices_and_the_Thermal_Refractive.htm\"><i>J. Synthetic Cryst.</i> <b>30</b>, 85-88 (2001)</a> (as cited in Handbook of Optics, 3rd edition, Vol. 4. McGraw-Hill 2009)"
 COMMENTS: "Extraordinary ray (e)"
 DATA:
   - type: formula 4
